adds controls translations

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -12,13 +12,21 @@
   "Inspect": "Inspect",
   "no-path": "You can't go there.",
   "controls-dialog": "Contrôles",
+  "keyboard": "Keyboard",
+  "gamepad": "Gamepad",
   "controls": {
     "hint": "Press F1 to check out the controls.",
     "help": "Open the controls view",
+    "click": "Click",
     "centerCamera": "Center the camera on the player",
     "cmap": "Open the character sheet",
     "useMode1": "Activate item in slot 1",
     "useMode2": "Activate item in slot 2",
+    "nextUseMode1": "Loop through use modes in slot 1",
+    "nextUseMode2": "Loop through use modes in slot 2",
+    "interactionMode": "Change interaction mode",
+    "padLeft": "Controls the cursor",
+    "padRight": "Controls the camera",
     "passTurn": "Pass your turn in combat",
     "inventory": "Open the inventory",
     "openSkilldex": "Open the skill panel",
