--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -33,13 +33,23 @@
     "Your offer": "Votre offre",
     "are-you-sure": "Etes-vous sur ?",
     "controls-dialog": "Contrôles",
+    "keyboard": "Clavier",
+    "gamepad": "Manette",
     "controls": {
       "hint": "Pressez F1 pour voir les contrôles.",
       "help": "Ouvre la vue des contrôles",
+      "click": "Cliquer",
       "centerCamera": "Centre la caméra sur votre personnage",
       "cmap": "Ouvre votre fiche de personnage",
       "useMode1": "Active l'objet en usage rapide à gauche",
       "useMode2": "Active l'objet en usage rapide à droite",
+      "nextUseMode1": "Change d'action pour l'objet en usage rapide à gauche",
+      "nextUseMode2": "Change d'action pour l'objet en usage rapide à droite",
+      "interactionMode": "Change le mode d'interaction",
+      "padLeft": "Controle le curseur",
+      "padRight": "Controle la caméra",
+      "previousTarget": "Curseur sur la cible précédente",
+      "nextTarget": "Cureur sur la cible suivante",
       "passTurn": "Passe votre tour lors d'un combat",
       "inventory": "Ouvre l'inventaire",
       "openSkilldex": "Ouvre le paneau de compétences",
