adds missing translations for CMAP attributes

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -354,6 +354,13 @@
       "sex-appeal": "Sex appeal",
       "skilled": "Skilled",
       "small-frame": "Small frame",
+      "strength": "Strength",
+      "perception": "Perception",
+      "endurance": "Endurance",
+      "charisma": "Charisma",
+      "intelligence": "Intelligence",
+      "agility": "Agility",
+      "luck": "Luck",
       "descriptions": {
         "strength": "Raw physical strength. A high Strength is good for physical characters.",
         "perception": "The ability to see, hear, taste and notice unusual things. A high Perception is important for a sharpshooter.",
