--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -109,11 +109,12 @@
       "dodge": "{{target}} dodged an attack from {{user}}.",
       "critical-failure": "{{user}} critically failed to use {{item}}."
     },
+    "killed": "You killed {{victimName}} and earned {{xp}} experience points.",
     "ko": "You passed out.",
     "drunk": "You are now drunk.",
     "drunk-pass-out": "You've had too much alcohol and passed out like a wreck.",
     "jail-sentence": "You've been sentenced to {{duration}} day(s) in jail.",
-    "jail-sentence": "You've completed your jail sentence.",
+    "jail-sentence-over": "You've completed your jail sentence.",
     "poison-damage": "You take {{damage}} points of damage from the poisoning.",
     "wont-barter": "This person doesn't want to barter with you.",
     "cannot-sneak": "You cannot sneak in plain sight.",
@@ -126,7 +127,6 @@
     "door-unlocked": "You successfully unlocked the door",
     "door-locked-failed": "You failed to lock the door",
     "door-unlocked-failed": "You failed to unlock the door",
-    "door-locked-failed": "You failed to lock the door",
     "door-broken": "You critically failed and broke the lock",
     "lock-is-broken": "The lock is broken",
     "door-is-locked": "It's locked",
