--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -22,6 +22,7 @@
     "New save": "Nouvelle sauvegarde",
     "Ok": "Ok",
     "Options": "Options",
+    "Pass turn": "Passer tour",
     "Pick an item": "Selectionner un objet",
     "Quests": "Quêtes",
     "Reload": "Recharger",
@@ -30,6 +31,9 @@
     "Use": "Utiliser",
     "Value": "Valeur",
     "Weight": "Poids",
+    "Take": "Prendre",
+    "Take all": "Prendre tout",
+    "Leave": "Laisser",
     "Your offer": "Votre offre",
     "are-you-sure": "Etes-vous sur ?",
     "controls-dialog": "Contrôles",
@@ -321,6 +325,7 @@
         "invalid-target": "Cible invalide.",
         "jail-sentence": "Tu as été condamné à {{duration}} jour(s) de prison.",
         "jail-sentence-over": "Tu as fait ton temps en cellule.",
+        "killed": "Tu as tué {{victimName}} et gagne {{xp}} points d'experience.",
         "ko": "Tu as perdu connaissance.",
         "lock-is-broken": "Le verrou est casse.",
         "no-path": "Pas de chemin libre pour aller là-bas.",
@@ -343,7 +348,8 @@
         "use": "{{user}} a utilise {{item}}",
         "weapons": {
             "dodge": "{{target}} a esquive une attaque de {{user}}.",
-            "use": "{{user}} a utilise {{item}} sur {{target}} pour {{damage}} dommages."
+            "use": "{{user}} a utilise {{item}} sur {{target}} pour {{damage}} dommages.",
+            "critical-failure": "{{user}} échoue catastrophiquement en essayant d'utiliser {{item}}."
         },
         "wont-barter": "Cette personne refuse de troquer avec toi.",
         "xp-gain": "Tu as gagne {{xp}} points d'experience."
