--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -642,7 +642,7 @@
         "stairs-toplevel": "des escaliers",
         "stool": "un tabouret",
 	"locker": "casier",
-	"gem-ore": "gisement de minerai"
+	"gemOre": "gisement de minerai"
     },
     "options": {
         "combatSpeed": "Vitesse des combats",
