add missing translations on perks

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -410,6 +410,15 @@
         "medicine": "Medical knowledge. The ability to treat wounds, cure diseases, and apply first aid.",
         "gambling": "The knowledge and practical skills related to wagering. The skill at cards, dice and other games.",
         "spellcasting": "Knowledge of spells and magic. Ability to cast spells (if relevant) and affinity with your inner magic.",
+        "awareness": "With Awareness, you are given detailed information about any critter you examine. You see their exact hit points and information about any weapon they are equipped with.",
+        "toughness": "When you are tough, you take less damage. Each level of this Perk will add +10% to your general damage resistance.",
+        "thief": "The blood of a thief runs through your veins. With the Thief Perk, you get a one-time bonus of +10% to your Sneak, Lockpick, Steal, and Traps skills. A well rounded thief is a live thief.",
+        "earlierSequence": "You are more likely to move before your opponents in combat, since your Sequence is +2 for each level of this Perk.",
+        "fasterHealing": "With each level of this Perk, you will get a +1 bonus to your Healing Rate. Thus you heal faster.",
+        "hthMeleeDamage": "Experience in unarmed combat has given you the edge when it comes to damage. You cause +2 points of damage with melee attacks for each level of this Perk.",
+        "strongBack": "AKA Mule. You can carry an additional 50 lbs. of equipment for each level of this Perk.",
+        "survivalist": "You are a master of the outdoors. This Perk confers the ability to survive in hostile environments. You get a +20% bonus to Outdoorsman for each level of this Perk.",
+        "bookworm": "You're well read, and the plethora of books you've read have granted you access to a wide vocabulary and knowledge of many random facts. You get a one-time bonus of +15% to your Speech skill.",
         "buffs": {
           "poisoned": "You've been poisoned ! You will periodically take damage until the poison is drained from your body (unless you die before that happens). You may want to find an antidote.",
           "drunk": "You have succumbed to Bacchus' call. You don't feel as sharp as usual. Actually, you don't feel much of anything, right now.",
