--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -276,6 +276,12 @@
         "used-on": "{{user}} used medicine on {{target}} and healed it for {{hp}} hit points.",
         "max-use-reached": "{{target}}'s wounds have already received treatment and can't be healed anymore right now."
     },
+    "spells": {
+      "title": "Spells",
+      "empty-spellbook": "You haven't learned any spells yet.",
+      "teleport": "Teleport",
+      "sleep": "Sleep"
+    },
     "cmap": {
       "buffs": {
         "poisoned": "Poisoned",
@@ -283,6 +289,8 @@
         "ko": "Unconscious",
         "drunk": "Drunk"
       },
+      "skills": "Skills",
+      "spells": "Spells",
       "name-placeholder": "Your name",
       "traits": "Traits",
       "perks": "Perks",
