--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -309,6 +309,9 @@
         "used-on": "{{user}} a utilise medecine sur {{target}} et l'a soigne pour {{hp}} points de vie"
     },
     "messages": {
+        "spellcast-exhausted": "Tu as lancé trop de sort. Tu as besoin de repos.",
+	"spellcast-success": "{{character}} a utilisé le sort {{spell}}.",
+        "spellcast-fail": "{{character}} n'a pas réussi a lancer un sort et subit {{damage}} points de dommage.",
         "cannot-sneak": "Tu ne peux pas te cacher.",
         "cannot-use-in-combat": "Ne peux pas être uilisé pendant un combat.",
         "collected-ore": "Tu as extrait du minerai.",
