refactore trap and lock behaviors

--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -7,6 +7,7 @@
     "Close": "Fermer",
     "Confirm": "Accepter",
     "Continue": "Continuer",
+    "Countdown": "Compte à rebours",
     "Deal": "Échanger",
     "Drop": "Jeter",
     "Exit": "Quitter",
