--- a/assets/locales/fr.json
+++ b/assets/locales/fr.json
@@ -341,7 +341,8 @@
         "jail-sentence": "Tu as été condamné à {{duration}} jour(s) de prison.",
         "jail-sentence-over": "Tu as fait ton temps en cellule.",
         "killed": "Tu as tué {{victimName}} et gagne {{xp}} points d'experience.",
-        "ko": "Tu as perdu connaissance.",
+        "ko": "{{target}} a perdu connaissance.",
+        "player-ko": "Tu as perdu connaissance.",
         "lock-is-broken": "Le verrou est casse.",
         "no-path": "Pas de chemin libre pour aller là-bas.",
         "not-enough-ap": "Pas assez de points d'action.",
