--- a/assets/locales/dialogs/junkville/helpful-mom-quest.en.json
+++ b/assets/locales/dialogs/junkville/helpful-mom-quest.en.json
@@ -7,7 +7,9 @@
             "angered-exit": "We've already done everything that was within our own abilities ! Don't you think we're suffering enough as it is ? Go away ! Leave our home !",
             "ask-more-payment": "It's your foal we're talking about. I'm sure you can afford to pay a little more. How about 400 caps ?",
             "ask-payment": "Ahem... I'm not that generous. I'm sure you'll find a way to repay me, right ?",
+            "convince-go-to-forbidden-caverns": "Helpful is down there. He needs us. Are we just gonna wait until his time runs out ? We have to try !",
             "demand-payment": "Actually, I have my own issues and needs. How much can you afford to pay me ?",
+            "dogs-dead-forbidden-cavern": "I took care of the diamond dogs. They won't bother us.",
             "entry": "<i>You walk in to a sorry scene. A couple is currently weeping in a corner of the room, occasionally whispering or sobbing. An awkward moment passes before the mare notices your presence:</i><br/>Wha... I'm sorry, you're coming in at an awful time. Please, leave us be...",
             "entry-alt": "Yes ? Did you find anything about my foal ?",
             "entry-explain": "I don't mean to pry, but you look like you could use some help. Is there something I can do for you ?",
@@ -20,15 +22,26 @@
             "explanations-provoke": "You're telling me that your son is in danger, and so you decided to stay here and sulk ?",
             "explanations-reject": "So that's what's happening ! Don't be so sad, I'm sure you'll find him eventually. See you later !",
             "explanations-where": "Do you have any idea of where he might've been ?",
+            "forbidden-caverns": "Randy said the caverns belong to the diamond dogs, and we're not supposed to get anywhere near that place. I'll do anything for my colt... but what good will it do if the dogs kill us on the way ?",
+            "give-no-payment": "Is that a joke ? The deal was that you would get a reward if you brought my colt back ! He's not here, is he ? Get lost, you heartless ass !",
+            "give-payment": "Sure ! Here are the {{reward}} caps we agreed on ! Heck, I'd be glad to give you everything I own at this point ! You're a hero !",
+            "give-up-on-forbidden-caverns": "Damn ! Let me think about it for a while... I'll come back with a better idea.",
             "go-hopeful": "I'll be back soon with Helpful. Hang in there !",
+            "go-to-help": "<i>Lead the way</i>",
+            "going-to-help": "Let's go then ! Come on Jolly, let's bring our colt back !",
             "half-accept-quest": "I see. I don't know how much I can do, but I'll keep an eye out for your foal.",
+            "murder-dogs-forbidden-caverns": "I wasn't very fond of the diamond dogs in the first place. Don't worry your pretty little face, I'll take care of them. Just wait for me, I won't be long.",
             "on-death-ask-payment": "Hm... and what about my payment ?",
             "on-death-leave": "<i>Leave her alone.",
             "on-death-report": "<i>She tries to speak, but nothing comes out. As she tries her best to keep her composure, she show you the door and makes it clear she wants to be left alone.",
             "on-help-report": "Dear Celestia all mighty ! He's alive ! Let's go and get him back up to the surface ! Lead the way !",
+            "on-save-ask-payment": "I believe we agreed on a monetary reward ?",
+            "on-save-detached-leave": "Nah, I do it all for shit and giggles. It's time for me to take my leave and find other ways to entertain my ADHD !",
+            "on-save-gracefully-leave": "Lending a hoof is its own reward. I'm just glad everything turned out okay.",
             "payment-asked": "I should've known... nothing's ever free in this damned world. Well, at least you're willing to help. We've been saving caps for the hard times... I guess this is a hard time. 200 caps sound ok ?",
             "payment-asked-more-failure": "This is outrageous ! You would ruin a family already visited by misery ? Don't you have a heart ? 200 caps is a lot of money for us already ! That's our final price !",
             "payment-asked-more-success": "This is outrageous... but there's no price I wouldn't pay to see my little Helpful alive and well. Go, find him, and you'll have your money.",
+            "quest-success": "Thank you ! Thank you so much for bringing Helpful home I don't even have the words ! How can we ever repay you ?",
             "refuse-payment": "Alright then. I sure hope Helpful can fend for himself out there. Goodbye.",
             "refuse-quest": "It doesn't look like I'll be able to help. I'm sorry for your loss. Goodbye.",
             "report-death": "I'm sorry... I found him. He fell down the well and died.",
